# themis

./: .gitignore  .gitlab-ci.yml  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: .readthedocs.yml
.github/workflows/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.gitlab/: generateJenkinsXmlFromJson.py  rununittests.sc
docs/: Makefile  build_docs.sh  make.bat
docs/notebooks/: Demostration_of_Samplers.ipynb  Sampling_Documentation.ipynb  hill_sensitivity.ipynb  polynomial_sensitivity.ipynb
docs/source/: api.rst  conf.py  examples.rst  filters.rst  index.rst  laf.rst  likelihoods.rst  mcmc.rst  plots.rst  quickstart.rst  runtime_api.rst  sampling.rst  sampling_adapt.rst  sampling_component.rst  sampling_composite.rst  sampling_sampler.rst  sampling_tutorial.rst  uq_component.rst  version_history.rst
examples/Hill_Function/: hill_driver.py  hill_function.py
examples/Hill_Function_Separate/: hill_data.py  hill_driver_ensemble.py  hill_driver_mcmc.py  hill_driver_surrogate_model.py  hill_interface.py
examples/Rosenbrock/: rosenbrock_driver.py  rosenbrock_input_deck  rosenbrock_interface.py
recipe/conda/: meta.yaml
sampling_methods/: composite_samples.py  sampler.py
sensitivity_methods/: pce_model.py  sensitivity.py
src/sampling_methods/: adaptive_sampler.py
src/themis/: runtime.py  utils.py
src/uq_methods/: mcmc_diagnostics.py
test/: collect.py  run_tests.sh  utils.py
tests/: collect.py  run_integration.py  run_unit.py  utils.py
tests/integration/: test_hpc.py  test_laptop.py  test_laptop_cli.py
tests/unit/: test_prepper.py  test_worker_network.py
themis/: __init__.py  __main__.py  laf.py  user_utils.py  versions.py
themis/backend/: __init__.py  network.py
themis/database/: sqlitedb.py  statusstore.py  utils.py
themis/resource/: __init__.py  allocators.py  executors.py
uq_methods/: likelihoods.py  uqp_filter.py  uqp_mcmc.py
uqp/: __init__.py
uqp/sampling/: adaptive_sampler.py  composite_samples.py  sampler.py
(+111 files in other folders)
